--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ header .logo {
   </form>
 </section>
 
-        <footer style="margin-top:18px;color:var(--muted)">© 2025 WIDYA TAMA RIZKY RAMADHAN. All rights reserved.</footer>
+        <footer style="margin-top:18px;color:var(--muted)">© 2025 Website Edukasi Pemilu 1955. Dibuat Oleh Widya Tama Rizky Ramadhan XII SIJA 1</footer>
       </article>
 
       <aside class="sidebar sheet">
